<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicPlayer2</string>
    <string name="application">MusicPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
    <string name="widget_name">MusicPlayerWidget</string>
    <string name="musicPlayerService">MusicPlayer</string>
    
</resources>
