<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dip"
    android:background="@drawable/myshape"
    tools:context=".MusicPlayerWidget" >

    <TextView
        android:id="@+id/trackDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingLeft="6dp"
        android:paddingTop="2dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFFFF" />

    <LinearLayout
        android:id="@+id/WidgetButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/trackDetails" >

        <Button
            android:id="@+id/widget_left"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev" />

        <Button
            android:id="@+id/widget_play"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/play" />

        <Button
            android:id="@+id/widget_pause"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pause" />

        <Button
            android:id="@+id/widget_right"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>

    <TextView
        android:id="@+id/currentProgression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/WidgetButtonsLayout"
        android:layout_alignParentRight="true"
        android:paddingRight="6dp"
        android:paddingTop="2dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFFFF" />

    <ListView
        android:id="@+id/playList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/WidgetButtonsLayout" >
    </ListView>

</RelativeLayout>